--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,9 @@ gl-wrapper = { git = "https://ihvl.go.ro/gitea/Error1000/gl-wrapper.git" }
 # Utils
 glam = "*"
 itertools = "*"
+one_user = "*"
+bitvec = "*"
+lazy_static = "*"
 
 [build-dependencies]
 gl_generator = "*"
